fix spacing header

--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,10 @@ footer{
 }
 
 @media(max-width: 1200px) {
+
+    /* header{
+        justify-content: space-between;
+    } */
     
   
        
@@ -397,40 +401,14 @@ footer{
         justify-self: flex-end;
         display: flex;
     }
-    .menu-icon{ /* Show hamburger menu */
+    .nav-2{
+        display: none;
+    }
+    .menu-icon{ /* Show hamburger menu icon */
         display: block;
-        
     }
-
-  /*   .nav-home{
-        grid-area: menu1;
-    }
-    .nav-about{
-        grid-area: menu2;
-    }
-    .nav-contact{
-        grid-area: menu3;
-    }
-    .nav-logo{
-        grid-area: logo;
-    }
-    
-    .nav-elements {
-        width: 100%;
-        display: grid;
-        justify-content: stretch;
-        grid-template-columns:  10px 150px  auto  160px;
-        grid-template-rows: auto;
-        grid-template-areas:
-        " . menu1 . logo"
-        " . menu2 . logo"
-        " . menu3 . . ";
-        
-    } */
-   
     .nav-element {
        padding:20px;
-       /* display: none; */
     }
     .nav-elements{
         display: none;
@@ -442,16 +420,15 @@ footer{
         display: block;
 
     }
-    .nav-1 {
-        justify-self: flex-end;
-    }
+   
     .menu-icon {
         color: var(--dark-color);
         margin: 5px;
         padding: 10px;
         font-size: 2rem;
         cursor: pointer;
-        
+        order: 2;
+        /* justify-self: flex-end; */
         }
     
     .buy-gender{
